--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <title>Spotify</title>
+    <title>Song Streaming</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="icon.png" />
+    <link rel="icon" type="image/x-icon" href="icon.svg" />
   </head>
   <body>
     <app-root></app-root>
