--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,42 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <title>Song Streaming</title>
+    <title>Streaming de Música</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="icon.svg" />
+    <meta name="application-name" content="Streaming de Música" />
+    <meta
+      name="description"
+      content="Streaming de música com Angular. Player moderno, upload com pré‑visualização, busca e layout responsivo."
+    />
+    <meta name="keywords" content="música, streaming, angular, player, upload" />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#8b0f16" />
+    <meta name="color-scheme" content="dark light" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Streaming de Música" />
+    <meta property="og:title" content="Streaming de Música" />
+    <meta
+      property="og:description"
+      content="Streaming de música com Angular. Player moderno, upload com pré‑visualização, busca e layout responsivo."
+    />
+    <meta property="og:url" content="/" />
+    <meta property="og:image" content="/icon.svg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Streaming de Música" />
+    <meta
+      name="twitter:description"
+      content="Streaming de música com Angular. Player moderno, upload com pré‑visualização, busca e layout responsivo."
+    />
+    <meta name="twitter:image" content="/icon.svg" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="apple-touch-icon" href="/icon.svg" />
+
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   </head>
   <body>
     <app-root></app-root>
