fix: using png instead svg

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       content="Streaming de música com Angular. Player moderno, upload com pré‑visualização, busca e layout responsivo."
     />
     <meta property="og:url" content="/" />
-    <meta property="og:image" content="/icon.svg" />
+    <meta property="og:image" content="https://spotify.joaopdias.dedyn.io/icon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Streaming de Música" />
@@ -31,13 +31,13 @@
       name="twitter:description"
       content="Streaming de música com Angular. Player moderno, upload com pré‑visualização, busca e layout responsivo."
     />
-    <meta name="twitter:image" content="/icon.svg" />
+    <meta name="twitter:image" content="https://spotify.joaopdias.dedyn.io/icon.png" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <link rel="apple-touch-icon" href="/icon.svg" />
+    <link rel="apple-touch-icon" href="https://spotify.joaopdias.dedyn.io/icon.png" />
 
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://spotify.joaopdias.dedyn.io/icon.png" />
   </head>
   <body>
     <app-root></app-root>
